overhaul widget tooltip classes